New(er) responses

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -68,14 +68,14 @@
 	"serverinfo_emotes_too_many": " and **{guild_emotes_left}** more",
 	"serverinfo_emotes_none": "No emotes",
 
-	"ban_success": "{emote_success} Banned **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"ban_success": "{emote_success} **{target_tag}** `({target_id})` has been banned for **{reason}** `[#{infractionId}]`",
 	"ban_fail": "{emote_warn} Unable to ban **{target_tag}** `({target_id})`",
 	"already_banned": "{emote_warn} **{target_tag}** `({target_id})` is already banned with the reason `{reason}`",
 
 	"not_banned": "{emote_warn} **{target_tag}** `({target_id})` is not already banned",
-	"unban_success": "{emote_success} Unbanned **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"unban_success": "{emote_success} **{target_tag}** `({target_id})` has been unbanned for **{reason}** `[#{infractionId}]`",
 
-	"kick_success": "{emote_success} Kicked **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"kick_success": "{emote_success} **{target_tag}** `({target_id})` has been kicked for **{reason}** `[#{infractionId}]`",
 	"kick_fail": "{emote_warn} Unable to kick **{target_tag}** `({target_id})`",
 
 	"purge_too_many": "{emote_warn} Can only purge a max of 200 messages at a time",
@@ -97,23 +97,23 @@
 
 	"inviteinfo_error": "{emote_warn} Unable to find a guild with that invite",
 
-	"multiban_success": "{emote_success} Banned {full_list} for **{reason}**",
+	"multiban_success": "{emote_success} {full_list} have been banned for **{reason}**",
 
-	"multiunban_success": "{emote_success} Unbanned {full_list} for **{reason}**",
+	"multiunban_success": "{emote_success} {full_list} have been unbanned for **{reason}**",
 
-	"multikick_success": "{emote_success} Kicked {full_list} for **{reason}**",
+	"multikick_success": "{emote_success} {full_list} have been kicked for **{reason}**",
 
-	"multiwarn_success": "{emote_success} Warned {full_list} for **{reason}**",
+	"multiwarn_success": "{emote_success} {full_list} have been warned for **{reason}**",
 
-	"softban_success": "{emote_success} Softbanned **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"softban_success": "{emote_success} **{target_tag}** `({target_id})` has been soft-banned for **{reason}** `[#{infractionId}]`",
 
 	"deafen_already_deaf": "{emote_warn} User is already deafened!",
-	"deafen_success": "{emote_success} Deafened **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"deafen_success": "{emote_success} **{target_tag}** `({target_id})` has been deafened for **{reason}** `[#{infractionId}]`",
 
 	"undeafen_not_deaf": "{emote_warn} User is not deafened!",
-	"undeafen_success": "{emote_success} Undeafened **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"undeafen_success": "{emote_success} **{target_tag}** `({target_id})` has been undeafened for **{reason}** `[#{infractionId}]`",
 
-	"voicekick_success": "{emote_success} Voice kicked **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"voicekick_success": "{emote_success} **{target_tag}** `({target_id})` has been voice-kicked for **{reason}** `[#{infractionId}]`",
 
 	"slowmode_invalid_0s": "{emote_warn} Slowmode duration cannot be lower than **0 seconds**!",
 	"slowmode_invalid_6h": "{emote_warn} Slowmode duration cannot be higher than **6 hours**!",
@@ -133,9 +133,9 @@
 	"mute_not_muted": "{emote_warn} The specified user is not currently muted!",
 	"mute_already_muted": "{emote_warn} The specified user is already muted!",
 
-	"warn_success": "{emote_success} Warned **{user_name}#{user_discriminator}** `({user_id})` for **{reason}** `[#{infractionId}]`",
+	"warn_success": "{emote_success} **{user_name}#{user_discriminator}** `({user_id})` has been warned for **{reason}** `[#{infractionId}]`",
 
-	"unmute_success": "{emote_success} Unmuted **{target_tag}** `({target_id})` for **{reason}** `[#{infractionId}]`",
+	"unmute_success": "{emote_success} **{target_tag}** `({target_id})` has been unmuted for **{reason}** `[#{infractionId}]`",
 
 	"infraction_not_found": "{emote_warn} Infraction **#{infractionId}** could not be found!",
 	"infraction_delete_success": "{emote_success} Infraction **#{infractionId}** successfully deleted!",
