--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -148,6 +148,7 @@
 	"infraction_info_reason": "\n\n**Reason:** {reason}",
 	"infraction_list_not_found": "{emote_warn} This guild does not seem to have any infractions!",
 	"infraction_claim_success": "{emote_success} You have claimed responsibility over infraction **#{infractionId}**",
+	"infraction_update_success": "{emote_success} Infraction **#{infractionId}** has been updated!",
 
 	"invalid_snowflake": "{emote_warn} `{snowflake}` is an invalid snowflake",
 	"snowflake_info": "I don't know if this snowflake belongs to anyone or anything\n\n"
