--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -81,6 +81,7 @@
 	"kick_fail": "{emote_warn} Unable to kick **{target_tag}** `({target_id})`",
 
 	"purge_too_many": "{emote_warn} Can only purge a max of 200 messages at a time",
+	"purge_too_few": "{emote_warn} You cannot purge less than 1 message :confused: why would you even do that",
 
 	"verification_non_integer": "{emote_warn} Level needs to be an integer",
 	"verification_community_zero": "{emote_warn} Verification level cannot be set to `0` for community servers!",
