--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -12,6 +12,8 @@
 	"global_loading": "{emote_loading} Loading...",
 	"global_not_in_voice": "{emote_warn} User is not connected to a Voice Channel!",
 
+	"premium_message": "Premium command, become a patreon and get access to it <https://www.patreon.com/bulbbot>",
+
 	"event_message_args_unexpected": "{emote_warn} Unexpected argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
 	"event_message_args_missing": "{emote_warn} Missing argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
 
@@ -27,6 +29,64 @@
 
 	"event_member_joined": "{emote_join} **New member:** **{user_tag}** `({user_id})` - **Account created:** {user_age}",
 	"event_member_left": "{emote_leave} **Member left:** **{user_tag}** `({user_id})`",
+
+	"config_language_success": "{emote_success} Successfully changed the language to `{language}`",
+	"config_language_invalid_args": "{emote_warn} Invalid language, select one from {languages}",
+	"config_language_missing_args": "{emote_warn} Missing required argument `language`",
+
+	"config_logging_success": "{emote_success} Successfully started logging {part} in {channel}",
+	"config_logging_missing_args": "{emote_warn} Missing required argument `channel`",
+	"config_logging_invalid_channel": "{emote_warn} Not a valid channel",
+	"config_logging_unable_to_send_messages": "{emote_warn} Cannot post messages in that channel",
+
+	"config_mute_success": "{emote_success} Successfully updated the muted role",
+	"config_mute_missing_args": "{emote_warn} Missing required argument `role`",
+	"config_mute_invalid_role": "{emote_warn} Not a valid role",
+	"config_mute_unable_to_manage": "{emote_warn} Unable to manage that role, move my role higher than that role for it to work",
+
+	"config_prefix_success": "{emote_success} Successfully updated the prefix to `{prefix}`",
+	"config_prefix_missing_args": "{emote_warn} Missing required argument `prefix`",
+
+	"override_create_invalid_part": "{emote_warn} Missing required argument `part`, can be either `role` or `command`",
+	"override_create_missing_name": "{emote_warn} Missing required argument `role/command name`",
+	"override_create_missing_clearance": "{emote_warn} Missing required argument `clearance`",
+	"override_create_non_number": "{emote_warn} `{clearance}` is not valid clearance type",
+	"override_create_less_than_0": "{emote_warn} The clearance level can't be less than or equal to 0",
+	"override_create_more_than_100": "{emote_warn} The clearance level can't be more than or equal to 100",
+	"override_create_higher_than_yourself": "{emote_warn} You cannot create an override with a higher clearance level than your clearance level",
+	"override_create_invalid_role": "{emote_warn} Not a valid role",
+	"override_create_invalid_command": "{emote_warn} `{command}` is not a valid command",
+	"override_create_success": "{emote_success} Successfully created an override with the clearance level of `{clearance}`",
+
+	"override_disable_missing_command": "{emote_warn} Missing command",
+	"override_disable_invalid_command": "{emote_warn} `{command}` is not a valid command",
+	"override_disable_success": "{emote_success} Successfully disabled command `{command}`",
+
+	"override_enable_missing_command": "{emote_warn} Missing command",
+	"override_enable_invalid_command": "{emote_warn} `{command}` is not a valid command",
+	"override_enable_success": "{emote_success} Successfully enabled command `{command}`",
+
+	"override_edit_invalid_part": "{emote_warn} Missing required argument `part`, can be either `role` or `command`",
+	"override_edit_missing_name": "{emote_warn} Missing required argument `role/command name`",
+	"override_edit_missing_clearance": "{emote_warn} Missing required argument `clearance`",
+	"override_edit_non_number": "{emote_warn} `{clearance}` is not valid clearance type",
+	"override_edit_less_than_0": "{emote_warn} The clearance level can't be less than or equal to 0",
+	"override_edit_more_than_100": "{emote_warn} The clearance level can't be more than or equal to 100",
+	"override_edit_higher_than_yourself": "{emote_warn} You cannot create an override with a higher clearance level than your clearance level",
+	"override_edit_invalid_role": "{emote_warn} Not a valid role",
+	"override_edit_invalid_command": "{emote_warn} `{command}` is not a valid command",
+	"override_edit_non_existent_override_command": "{emote_warn} No override was found for that command, you need to create an override to be able to edit it",
+	"override_edit_non_existent_override_role": "{emote_warn} No override was found for that role, you need to create an override to be able to edit it",
+	"override_edit_success": "{emote_success} Successfully updated the override with a new clearance level of `{clearance}`",
+
+	"override_remove_invalid_part": "{emote_warn} Missing required argument `part`, can be either `role` or `command`",
+	"override_remove_missing_name": "{emote_warn} Missing required argument `role/command name`",
+	"override_remove_non_existent_override_command": "{emote_warn} No command override was found with that name",
+	"override_remove_non_existent_override_role": "{emote_warn} No role override was found with that id/mention",
+	"override_remove_success": "{emote_success} Successfully removed the command",
+
+	"override_invalid_arguments": "{emote_warn} Missing required argument `action`, can be one of the following `add|create`, `delete|remove`, `cfg|edit`, `enable`, `disable`",
+	"config_invalid_arguments": "{emote_warn} Missing required argument `part`, can be one of the following `prefix`, `language`, `mute_role|mute`, `mod_action|modaction|mod`, `automod`, `messagelogs|message`, `rolelogs|role`, `memberlogs|member`, `channelogs|channel`, `joinleavelogs|joinleave`",
 
 	"help_command_not_found": "Unable to find any commands with that name",
 
