--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -12,6 +12,12 @@
 	"global_loading": "{emote_loading} Loading...",
 	"global_not_in_voice": "{emote_warn} User is not connected to a Voice Channel!",
 
+	"global_cannot_action_self": "{emote_warn} You cannot perform this action on yourself!",
+	"global_cannot_action_owner": "{emote_warn} You cannot perform this action on the server owner!",
+	"global_cannot_action_role_equal": "{emote_warn} You cannot perform this action on **{user_tag}** as you do not have a higher role than them!",
+	"global_cannot_action_role_higher": "{emote_warn} You cannot perform this action on **{user_tag}** as they have a higher role than you!",
+	"global_cannot_action_bot_self": "{emote_warn} You cannot perform this action on the bot!",
+
 	"premium_message": "This is a premium command, become a Patreon and get access to it <https://www.patreon.com/bulbbot>",
 
 	"event_message_args_unexpected": "{emote_warn} Unexpected argument `{arg}`. Expected `{arg_expected}` got `{arg_provided}`\n{emote_wrench} **Correct usage:** {usage}",
